update readme & added speech api server

--- a/annotation.yaml
+++ b/annotation.yaml
@@ -21,6 +21,7 @@ skip_files:
 - \.gitignore
 - ^\.git/.*
 - ^node_modules/(.*/)?
+- ^speech-api-server/node_modules/(.*/)?
 
 handlers:
 - url: /assets/css
